--- a/Pi_using_Monte_Carlo_Approximation/MonteCarlo_Pi.ipynb
+++ b/Pi_using_Monte_Carlo_Approximation/MonteCarlo_Pi.ipynb
@@ -7,14 +7,8 @@
    "source": [
     "# Calculating $\\pi$ using Monte Carlo Method\n",
     "\n",
-    "Monte Carlo methods, or Monte Carlo experiments, are a broad class of computational algorithms that rely on repeated random sampling to obtain numerical results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87120f7e",
-   "metadata": {},
-   "source": [
+    "Monte Carlo methods, or Monte Carlo experiments, are a broad class of computational algorithms that rely on repeated random sampling to obtain numerical results.\n",
+    "\n",
     "Given that the ratio of their areas is $\\pi/4$, the value of $\\pi$ can be approximated using a Monte Carlo method:\n",
     "\n",
     "1. Draw a square, then inscribe a quadrant within it\n",
@@ -179,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
